--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@formatjs/intl-pluralrules": "^3.5.6",
     "@formatjs/intl-relativetimeformat": "^7.3.6",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.0.1",
     "connected-react-router": "^6.9.1",
     "lodash": "^4.17.21",
+    "markdown-it": "^12.1.0",
     "moment": "^2.29.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
     "react-autosuggest": "^10.1.0",
@@ -20,19 +21,26 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-image-lightbox": "^5.1.4",
     "react-intl": "^5.20.2",
+    "react-loading-overlay": "1.0.1",
+    "react-markdown-editor-lite": "^1.3.0",
+    "react-number-format": "^4.7.3",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
+    "react-slick": "^0.28.1",
     "react-toastify": "^5.5.0",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^8.10.1",
     "redux": "^4.1.0",
     "redux-auth-wrapper": "^2.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-state-sync": "^2.1.0",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.3.2"
   },
   "scripts": {
